# advent-of-code

./: .pre-commit-config.yaml  README.md  aoc.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
advent_of_code/: constants.py  utils.py
advent_of_code/twenty_twenty_three/: day01.py
advent_of_code/twenty_twenty_two/: calorie_counting.py  camp_cleanup.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day08.py  day13.py  rock_paper_scissors.py  rucksack_reorganization.py  tuning_trouble.py
tests/: test_calorie_counting.py  test_camp_cleanup.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day08.py  test_day13.py  test_rock_paper_scissors.py  test_rucksack_reorganization.py  test_tuning_trouble.py  test_twenty_twenty_two.py
tests/twenty_twenty_three/: test_day01.py
tests/twenty_twenty_two/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day08.py  test_day13.py
