[tool.poetry]
name = "advent-of-code"
version = "0.1.2"
description = "Submissions for advent of code"
authors = ["Stefan Langenbach"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.15.7"
pre-commit = "^2.20.0"
ipython = "^8.7.0"
isort = "^5.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
