[tool.poetry]
name = "advent-of-code"
version = "0.2.3"
description = "Submissions for advent of code"
authors = ["Stefan Langenbach"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
ipython = "^8.7.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "I", "S", "B", "PL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
